--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <div id="screen3" class="screen">
         <div class="content">
             <div class="gif-container fade-in">
-                <img src="https://media.tenor.com/LWALbByStmwAAAAi/milk-and-mocha-bear-couple.gif" alt="couple bears" class="cute-gif">
+                 <img src="https://media.tenor.com/gUiu1zyxfzYAAAAi/bear-kiss-bear-kisses.gif" alt="cute bear" class="cute-gif">
             </div>
-            <h2 class="big-question fade-in delay-1">💝¿Quieres ser mi San Valentín?💝</h2>
+            <h2 class="fade-in delay-1">💝¿Quieres ser mi San Valentín?💝</h2>
             <p class="subtitle fade-in delay-2">Eres la única persona con quien quiero pasar este día</p>
             
             <div class="buttons-container fade-in delay-3">
