--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Pantalla 1: Pregunta inicial -->
     <div id="screen1" class="screen active">
         <div class="content">
+            <div class="gif-container fade-in">
+                <img src="https://media.tenor.com/gUiu1zyxfzYAAAAi/bear-kiss-bear-kisses.gif" alt="cute bear" class="cute-gif">
+            </div>
             <h1 class="fade-in">Hola bebeeee👋</h1>
             <p class="fade-in delay-1">Tengo algo importante que preguntarte...</p>
             <button class="btn primary-btn fade-in delay-2" onclick="nextScreen(2)">
